<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.delotengsmarthidro.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_panduan"
        android:name="com.example.delotengsmarthidro.ui.panduan.PanduanFragment"
        android:label="@string/title_panduan"
        tools:layout="@layout/fragment_panduan" />

    <fragment
        android:id="@+id/navigation_diagnose"
        android:name="com.example.delotengsmarthidro.ui.diagnose.DiagnoseFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_diagnose" />
</navigation>