<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:scaleType="centerCrop"
            android:src="@drawable/home_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:scrollbars="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/sectionMain"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_cuaca" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="180dp"
                    android:layout_height="20dp"
                    android:background="@color/placeholder_white_transparent"
                    android:layout_marginBottom="8dp"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@color/placeholder_white_transparent"
                    android:layout_marginBottom="8dp"/>

                <View
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:background="@color/placeholder_white_transparent"/>
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="true"
            app:layout_constraintBottom_toTopOf="@+id/sectionMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" >
            
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp">

                    <include layout="@layout/list_cuaca_placeholder" />
                    <include layout="@layout/list_cuaca_placeholder" />
                    <include layout="@layout/list_cuaca_placeholder" />
                    <include layout="@layout/list_cuaca_placeholder" />
                </LinearLayout>


            </ScrollView>
        </com.facebook.shimmer.ShimmerFrameLayout>


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="?attr/actionBarSize"
            tools:text="Sabtu, 01 November 2025"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/suhu"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        <TextView
            android:id="@+id/tvCuaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            tools:text="Cuaca"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvTemp"
            app:layout_constraintStart_toStartOf="@+id/recyclerView" />


        <RelativeLayout
            android:id="@+id/sectionMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-24dp"
            android:background="@drawable/corner_radius_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:paddingBottom="?attr/actionBarSize">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="?attr/actionBarSize">

                <LinearLayout
                    android:id="@+id/section1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/corner_radius_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="Panduan Hidroponik Selada"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/desc1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/desc1"
                            android:textColor="@color/text_color"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/header"
                            app:layout_constraintTop_toBottomOf="@id/header" />

                        <Button
                            android:id="@+id/btn_ayo_mulai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="@color/button_color"
                            android:drawableEnd="@drawable/baseline_arrow_forward_24"
                            android:paddingStart="30dp"
                            android:paddingEnd="30dp"
                            android:text="Lihat Panduan Tanaman"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="@+id/desc1"
                            app:layout_constraintStart_toStartOf="@+id/desc1"
                            app:layout_constraintTop_toBottomOf="@+id/desc1" />


                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/planting"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/btn_ayo_mulai" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/section2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/section1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/corner_radius_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/header2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="Diagnosa Cepat!"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/desc2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/desc1"
                            android:textColor="@color/text_color"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@id/header2"
                            app:layout_constraintTop_toBottomOf="@id/header2" />

                        <Button
                            android:id="@+id/btnDiagnose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="@color/button_color"
                            android:drawableEnd="@drawable/baseline_arrow_forward_24"
                            android:paddingStart="30dp"
                            android:paddingEnd="30dp"
                            android:text="@string/mulai_diagnosa"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="@+id/desc2"
                            app:layout_constraintStart_toStartOf="@+id/desc2"
                            app:layout_constraintTop_toBottomOf="@+id/desc2" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/detection_hero"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/btnDiagnose"
                            app:layout_constraintBottom_toBottomOf="parent"/>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

